feat: 实现了画布区域两个cell之间的连线

--- a/src/components/SideMenu/index.module.scss
+++ b/src/components/SideMenu/index.module.scss
@@ -12,7 +12,11 @@
   }
 
   .content-item-list {
+    display: flex;
+    flex-wrap: wrap;
+
     .list-item {
+      margin-right: 10px;
       width: 24px;
       height: 24px;
       display: flex;
